--- a/csync/Cargo.toml
+++ b/csync/Cargo.toml
@@ -11,5 +11,7 @@ bytes = "0.4"
 futures = "0.1.21"
 log = "0.4"
 env_logger = "0.5"
+varmint = "0.1"
+byteorder = "1.2"
 bit-vec = "0.5"
 tokio-file-unix = "0.5"
