--- a/csync/Cargo.toml
+++ b/csync/Cargo.toml
@@ -13,8 +13,7 @@ env_logger = "0.5"
 varmint = "0.1"
 byteorder = "1.2"
 bit-vec = "0.5"
-#tokio-file-unix = "0.5"
-tokio-file-unix = { git = "https://github.com/oberien/tokio-file-unix" }
+tokio-file-unix = "0.5.1"
 ring = "0.12"
 hex = "0.3"
 take_mut = "0.2"
