--- a/v2/scsync/Cargo.toml
+++ b/v2/scsync/Cargo.toml
@@ -8,3 +8,7 @@ tokio = "0.1"
 tokio-io = "0.1"
 bytes = "0.4"
 futures = "0.1"
+serde = "1.0"
+serde_derive = "1.0"
+serde_cbor = "0.8"
+varmint = "0.1"
